editors/zed/grammar/test/corpus/language.txt
==================
Complete contract
==================

package layered {
  root src
  language zig
  facade root.zig
  exclude generated/**
}

zones {
  floor floor.zig
  engine {
    engine/**
    shared/**
  }
  face face.zig
}

seal engine through engine.zig open to face.zig
keep face.zig to root.zig
use ledger hyper by engine face
limit reach to 2 hops
forbid cycles across directories
variance seal face.zig -> engine/parts.zig because "retire through the facade"

---

(source_file
  (package_declaration
    name: (word)
    (package_setting value: (word))
    (package_setting value: (word))
    (package_setting value: (paths (word)))
    (package_setting value: (paths (word))))
  (zones_declaration
    (zone_definition name: (word) paths: (paths (word)))
    (zone_definition name: (word) paths: (paths (path_block (word) (word))))
    (zone_definition name: (word) paths: (paths (word))))
  (seal_declaration subject: (word) facade: (word) guests: (paths (word)))
  (keep_declaration subject: (word) guests: (paths (word)))
  (use_declaration modules: (paths (word) (word)) scope: (paths (word) (word)))
  (limit_declaration count: (number))
  (forbid_declaration)
  (variance_declaration
    law: (law)
    subject: (edge from: (word) to: (word))
    reason: (string)))

==================
Folded cycle reason
==================

variance cycle {
  one.zig
  two.zig
}
because
  \\Retire this once the common interface lands.
  \\The second line folds into the same reason.

---

(source_file
  (variance_declaration
    law: (law)
    subject: (cycle member: (word) member: (word))
    reason: (folded_reason (reason_text) (reason_text))))

==================
Workspace holding members together
==================

workspace {
  member libs/kernels/*
  root src
  language zig
  facade root.zig
  use ledger by **
  limit reach to 1 hop
}

---

(source_file
  (workspace_declaration
    (workspace_setting value: (paths (word)))
    (workspace_setting value: (word))
    (workspace_setting value: (word))
    (workspace_setting value: (paths (word)))
    (use_declaration modules: (paths (word)) scope: (paths (word)))
    (limit_declaration count: (number))))

==================
Member inheriting every setting
==================

package hearth

zones {
  forge forge.zig
}

---

(source_file
  (package_declaration
    name: (word))
  (zones_declaration
    (zone_definition name: (word) paths: (paths (word)))))
